  can use it to efficiently locate unwinding information for a code
  address.

* Support for OpenRISC running on Linux has been added.  This port requires
  as least binutils 2.35, GCC 11, and Linux 5.4.  Currently only soft-float
  ABI is supported:

    - or1k-linux-gnu

  The OpenRISC ABI is 32-bit big-endian and uses 64-bit time (y2038 safe) and
  64-bit file offsets (LFS default).

Deprecated and removed features, and other changes affecting compatibility:

* On x86-64, the LD_PREFER_MAP_32BIT_EXEC environment variable support
  has been removed since the first PT_LOAD segment is no longer executable
  due to defaulting to -z separate-code.

* The r_version update in the debugger interface makes the glibc binary
  incompatible with GDB binaries built without the following commits:

  c0154a4a21a gdb: Don't assume r_ldsomap when r_version > 1 on Linux
  4eb629d50d4 gdbserver: Check r_version < 1 for Linux debugger interface

  when audit modules or dlmopen are used.

* Intel MPX support (lazy PLT, ld.so profile, and LD_AUDIT) has been removed.

* The --enable-static-pie option is no longer available.  The glibc build
  configuration script now automatically detects static-pie support in the
  toolchain and architecture and enables it if available.

* The catchsegv script and associated libSegFault.so shared object have
  been removed.  There are widely-deployed out-of-process alternatives for
  catching coredumps and backtraces.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.34

Major new features:

* In order to support smoother in-place-upgrades and to simplify
  the implementation of the runtime all functionality formerly