@@ -120,6 +120,12 @@ Major new features:
   The OpenRISC ABI is 32-bit big-endian and uses 64-bit time (y2038 safe) and
   64-bit file offsets (LFS default).
 
+* A new configure option, --with-rtld-early-cflags, can be used to
+  specify additional compiler flags for building the early startup code
+  of the dynamic linker.  On targets which have CPU compatibility
+  checks, this can help to ensure that proper diagnostics are printed if
+  the dynamic loader runs on an incompatible CPU.
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * On x86-64, the LD_PREFER_MAP_32BIT_EXEC environment variable support
